# IncognitoBin

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
Client/: Dockerfile  index.html  package-lock.json  package.json
Client/src/: App.tsx  index.css
Client/src/components/: icons.tsx
Client/src/components/Auth/: AuthSection.tsx  NewUserAlert.tsx
Client/src/layouts/: Header.tsx
Client/src/pages/: Auth.tsx  Create.tsx  NotFound.tsx  Read.tsx
Client/src/services/: PasteService.ts  UserService.ts
Client/src/utils/: crypto.ts
GUI/: package-lock.json  package.json
GUI/src/: App.tsx  index.css
GUI/src/utils/: crypto.ts
Server/: .env  Cargo.toml  Dockerfile
Server/resources/: init.sql
Server/src/: Config.rs  api.rs  db.rs  helpers.rs  main.rs
Server/src/config/: settings.rs
Server/src/db/: PasteDbOperations.rs  ScyllaDbOperations.rs  mod.rs  models.rs  paste_db_operations.rs  queries.rs  scylla_db_operations.rs
Server/src/handlers/: auth_handlers.rs  mod.rs  paste_handlers.rs
Server/src/models/: mod.rs  paste.rs  paste_vm.rs  user_vm.rs
Server/src/routes/: api.rs
Server/src/utils/: helpers.rs
Server/src/view_model/: models.rs
Worker/: Cargo.toml  Dockerfile
Worker/src/: api.rs  main.rs
Worker/src/chunks/: constants.rs  id.rs  store.rs
Worker/src/db/: mod.rs
Worker/src/handlers/: paste_ids.rs  user_auth.rs
Worker/src/paste_ids/: constants.rs  handlers.rs  id.rs  manager.rs  mod.rs
Worker/src/user_auth/: handlers.rs  mod.rs
src/: api.rs  chunks.rs  db.rs  main.rs
src/chunks/: manager.rs  mod.rs
(+15 files in other folders)
