[package]
name = "x_snippet_server"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
chrono = { version = "0.4" , features = ["serde"]}
actix-web = "4"
scylla = { version = "0.14.0" , features = [
    "chrono-04",
]}
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4","serde"] }
anyhow = "1.0.86"
futures = "0.3.30"
async-trait = "0.1.82"
reqwest = "0.12.7"
dotenv = "0.15.0"